# pychi

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  todo.md
.github/workflows/: docs.yml
Chi_Calc_For_Gunnar/: README.md  TChain_chi_Spectra.mat  T_Chain_Chi_Horiz_Grads_hu_Spectra_Test.m  csd_odas.m  mavs2_l1  mavs2_l2
Chi_Calc_For_Gunnar/Spectra_Plots/: Slope_Hist_1.fig  Slope_Hist_10.fig  Slope_Hist_11.fig  Slope_Hist_12.fig  Slope_Hist_13.fig  Slope_Hist_14.fig  Slope_Hist_15.fig  Slope_Hist_16.fig  Slope_Hist_17.fig  Slope_Hist_18.fig  Slope_Hist_19.fig  Slope_Hist_2.fig  Slope_Hist_20.fig  Slope_Hist_21.fig  Slope_Hist_22.fig  Slope_Hist_23.fig  Slope_Hist_24.fig  Slope_Hist_25.fig  Slope_Hist_26.fig  Slope_Hist_27.fig  Slope_Hist_28.fig  Slope_Hist_29.fig  Slope_Hist_3.fig  Slope_Hist_30.fig  Slope_Hist_31.fig  Slope_Hist_32.fig  Slope_Hist_33.fig  Slope_Hist_34.fig  Slope_Hist_35.fig  Slope_Hist_36.fig  Slope_Hist_37.fig  Slope_Hist_38.fig  Slope_Hist_39.fig  Slope_Hist_4.fig  Slope_Hist_40.fig  Slope_Hist_41.fig  Slope_Hist_42.fig  Slope_Hist_43.fig  Slope_Hist_44.fig  Slope_Hist_45.fig  (+128 more)
config/: default.yml
docs/: paper_method_comparison.md
matlab_version/: Calc_Chi_TChain_2.m
scripts/: export_matlab_fixtures.m
src/pychi/: __init__.py  chi.py  config.py  gradients.py  spectra.py
tests/: conftest.py  test_chi.py  test_config.py  test_gradients.py  test_matlab_plots.py  test_process.py  test_spectra.py
tests/fixtures/: chi_chunk_1.mat  chi_chunk_2.mat  chi_chunk_3.mat  chi_chunk_4.mat  chi_chunk_5.mat  gradient_chunk_1.mat  gradient_chunk_2.mat  gradient_chunk_3.mat  gradient_chunk_4.mat  (+7 more)
(+3 files in other folders)
