[project]
name = "pychi"
version = "0.1.0"
description = "Estimate turbulent temperature variance dissipation rate (chi) from oceanographic moored time series"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "gsw",
    "pyyaml",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://gunnarvoet.net/pychi/pychi.html"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pdoc>=16.0.0",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Package __init__ re-exports the public API for convenience; the names are
# intentionally imported without being listed in __all__ (which lists the
# submodules so pdoc documents each on its own page).
"__init__.py" = ["F401"]
